<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_title"/>"
    

    <RelativeLayout
        android:id="@+id/rel_interaction_vote"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dip">

        <ImageView 
            android:id="@+id/img_1_interaction"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:src="@drawable/interaction_vote"/>
        <Button
        android:id="@+id/btn_interaction_vote"
        android:layout_width="fill_parent"
        android:layout_height="37dip"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/img_1_interaction"
        android:layout_alignRight="@+id/img_1_interaction"
        android:background="@color/translucence_black"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="20dip"
        android:gravity="center_vertical"
        android:text="@string/vote" />
    </RelativeLayout>

   
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> 
        
        <TableRow 
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="10dip">
            
            <RelativeLayout
                android:id="@+id/rel_interaction_critic"
                android:layout_width="wrap_content"
                android:layout_height="100dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:orientation="vertical">
                

                 <ImageView
                     android:id="@+id/img_2_interaction"
                     android:layout_width="fill_parent"
                     android:layout_alignParentBottom="true"
                     android:layout_height="fill_parent"
                     android:src="@drawable/interaction_critic" />
                
                <Button
		            android:id="@+id/btn_interaction_critic"
		            style="@style/interaction_btn"
		            android:layout_alignLeft="@+id/img_2_interaction"
		            android:layout_alignRight="@+id/img_2_interaction"
		            android:layout_alignParentBottom="true"
		            android:text="@string/critic" />
                               
               
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/rel_interaction_award"
                android:layout_width="wrap_content"
                android:layout_height="100dip"
                android:layout_marginLeft="5dip"
                android:layout_weight="1" >
                
                <ImageView 
		            android:id="@+id/img_3_interaction"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_alignParentBottom="true"
		            android:src="@drawable/interaction_award"/>
                
                 <Button
		            android:id="@+id/btn_interaction_award"
		            style="@style/interaction_btn"
		            android:layout_alignLeft="@+id/img_3_interaction"
		            android:layout_alignRight="@+id/img_3_interaction"
		            android:layout_alignParentBottom="true"
		            android:text="@string/award" />
                
            </RelativeLayout>
            
        </TableRow>
        
        <TableRow 
             android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingBottom="10dip">
            
             <RelativeLayout
                 android:id="@+id/rel_interaction_essence"
                 android:layout_width="wrap_content"
                 android:layout_height="100dip"
                 android:layout_marginRight="5dip"
                 android:layout_weight="1" >
                 
                   <ImageView 
		            android:id="@+id/img_4_interaction"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_alignParentBottom="true"
		            android:src="@drawable/interaction_essence"/>
                 
                  <Button
		            android:id="@+id/btn_interaction_essence"
		            style="@style/interaction_btn"
		            android:layout_alignParentBottom="true"
		            android:layout_alignLeft="@+id/img_4_interaction"
		            android:layout_alignRight="@+id/img_4_interaction"
		            android:text="@string/essence" />
                
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/rel_interaction_depth"
                android:layout_width="wrap_content"
                android:layout_height="100dip"
                android:layout_marginLeft="5dip"
                android:layout_weight="1">
                  
                <ImageView 
		            android:id="@+id/img_5_interaction"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_alignParentBottom="true"
		            android:src="@drawable/interaction_depth"/>
                  
                 <Button
		            android:id="@+id/btn_interaction_depth"
		            style="@style/interaction_btn"
		            android:layout_alignLeft="@+id/img_5_interaction"
		            android:layout_alignRight="@+id/img_5_interaction"
		            android:layout_alignParentBottom="true"
		            android:text="@string/depth" />
                
            </RelativeLayout>
            
        </TableRow>
        
    </TableLayout>

</LinearLayout>
